# flask-tutorial

./: Procfile  README.rst  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py
src/dto/: credentials.py  user_creation.py
src/entities/: country.py  group.py  message.py  user.py
src/models/: country.py  group.py  message.py  user.py
src/routes/: __init__.py  auth.py  error.py  groups.py  users.py
tests/: conftest.py
tests/dto/: test_credentials.py  test_users.py
tests/routes/: test_groups.py  test_users.py
